--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
+    "nprogress": "^0.2.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "vue-sweetalert2": "^5.0.5"
